<resources>
    <string name="app_name">Gestor Avisos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bienvenido! "</string>
    <string name="invalid_username">Usuario no válido</string>
    <string name="invalid_password">La contraseña debe tener >5 caracteres</string>
    <string name="login_failed">Login erróneo</string>
    <string name="mananas">MAÑANA</string>
    <string name="tardes">TARDE</string>
    <string name="indiferente">INDIFERENTE</string>
    <string name="urgente">URGENTE</string>
    <string name="itFiltrar">Filtrar</string>
    <string name="stPreferencias">Preferencias</string>
    <string name="itAcerca">Acerca de...</string>
    <string name="itSalir">Salir</string>
    <string name="stSincronizar">Sincronizar</string>
    <string name="stEliminarDatos">Eliminar Datos</string>
    <string name="barraDetalles">Detalles del Aviso</string>
    <string name="sincronizado">Sincronización completada</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="titObservaciones">Editar observaciones</string>
    <string name="catVisualizacion">Visualización</string>
    <string name="menuSwitchTema">Tema</string>
    <string name="menuSwitchClaro">Claro</string>
    <string name="menuSwitchOscuro">Oscuro</string>
    <string name="menuTamFuente">Tamaño de la Fuente</string>
    <string name="menuCriterio">Criterio de Ordenación</string>
    <string name="catOrdenacion">Ordenación</string>
    <string name="menu_orden">Orden</string>
    <string name="menu_orden_asc">Asc</string>
    <string name="menu_orden_desc">Desc</string>
    <string name="menu_sd">Tarjeta SD</string>
    <string name="catAlmacenamiento">Almacenamiento</string>
    <string name="menu_limpieza">Limpieza de Archivos</string>
    <string name="menu_bd">Base de Datos</string>
    <string name="menu_bd_ext">ext</string>
    <string name="menu_bd_int">int</string>
    <string name="menu_nombrebd">Nombre Base de Datos</string>
    <string name="catBDExterna">Base de datos externa</string>
    <string name="menu_ip">IP</string>
    <string name="menu_puerto">Puerto</string>
    <string name="menu_usuario">Usuario</string>
    <string name="menu_password">Contraseña</string>
    <string name="menu_preferencias_titulo">Preferencias</string>
    <string name="btn_preferencias">Restablecer Valores</string>
    <string name="menuChkContraste">contraste</string>
    <string name="toggle_view">calendario</string>
    <string name="barraCalendario">Calendario de Avisos</string>
    <string name="btnCaptura">Captura</string>
    <string name="btnBorrar">Borrar</string>
    <string name="imgCliente">Imágenes del cliente</string>
    <string name="imgInstalador">Imágenes del instalador</string>
    <string name="tituloObs">Observaciones del cliente</string>
    <string name="btnCerrar">Cerrar</string>
    <string name="configurar_bd">Configurar Servidor</string>
    <string name="resumen_config_bd">Parámetros de configuración</string>
    <string name="confirmar_edicion_bd">Atención: se van a modificar los datos de conexión</string>
    <string name="editar">Editar</string>
    <string name="filtrar_por_urgencia">Filtrar por urgencia</string>
    <string name="todos">Todos</string>
    <string name="urgentes">Solo urgentes</string>
    <string name="filtrar_por_estado">Filtrar por estado</string>
    <string name="pendientes">Pendientes</string>
    <string name="parciales">Parciales</string>
    <string name="terminados">Terminados</string>
    <string name="filtrar_por_fecha">Filtrar por fecha</string>
    <string name="seleccionar_rango_fechas">Seleccionar rango</string>
    <string name="aplicar">Aplicar</string>
    <string name="limpiar">Limpiar</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="salir">Salir de la aplicación</string>
    <string name="pregunta_salir">¿Estás seguro de que quieres salir?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="mostrar_urgentes">Mostrar solo avisos urgentes</string>
    <string name="mostrar_terminados">Mostrar avisos terminados</string>
    <string name="mostrar_firmados">Mostrar avisos firmados</string>
    <string name="mostrar_semana">Semana actual</string>
    <string name="por_rango">POR RANGO</string>
    <string name="confirmar_eliminacion">Confirmar borrado de datos</string>
    <string name="info_eliminacion">¿Estás seguro de que deseas eliminar todos los datos?\\nSe perderá la información no sincronizada</string>
    <string name="aceptar">Aceptar</string>
    <string name="catSync">Sincronización</string>
    <string name="frecuencia_sync">Frecuencia de sincronización</string>
    <string name="idioma">Idioma</string>
    <string name="select_idioma">Selecciona el idioma de la aplicación</string>
    <string name="select_sync">Selecciona cada cuánto tiempo se sincroniza con el servidor</string>
    <string name="avisos_dia">"Avisos del día: "</string>
    <string name="no_avisos">"No hay avisos para "</string>
    <string name="confirmar">Confirmar</string>
    <string name="captura_cancel">Captura cancelada</string>
    <string name="datos_firma_guardados">Datos de firma guardados</string>
    <string name="whats_no_instalado">WhatsApp no está instalado</string>
    <string name="num_copiado">Número copiado</string>
    <string name="error_crear_archivo">Error al crear el archivo</string>
    <string name="error_acceso_archivo">Error al acceder al archivo</string>
    <string name="confirmar_borrado">Confirmar borrado</string>
    <string name="confirmacion_borrado">¿Estás seguro de que deseas eliminar esta imagen?</string>
    <string name="eliminar">Eliminar</string>
    <string name="img_borrada">Imagen borrada</string>
    <string name="error_borrado">Error al borrar</string>
    <string name="opciones_para">"Opciones para: "</string>
    <string name="preferencias_restablecidas">Las preferencias han sido restablecidas</string>
    <string name="avisos_urgentes">" aviso(s) URGENTE(S) de "</string>
    <string name="nuevos">" nuevos"</string>
    <string name="nuevos_avisos">" nuevos avisos disponibles"</string>
    <string name="n_nuevos_avisos">Nuevos Avisos</string>
    <string name="abrir_aplicacion">Toca para abrir la aplicación.</string>
    <string name="descripcion">Descripción:</string>
    <string name="observaciones">Observaciones:</string>
    <string name="imagenes">Imágenes</string>
    <string name="foto">Foto</string>
    <string name="firmar">Firmar</string>
    <string name="firma">Firma:</string>
    <string name="estado">Estado:</string>
    <string name="limpiar_firma">Limpiar firma</string>
    <string name="btn_parcial">PARCIAL</string>
    <string name="btn_terminado">TERMINADO</string>
    <string name="verificado">Verificado</string>
    <string name="complete_campos">Complete todos los campos</string>
    <string name="ingresar_firma">Debe ingresar una firma</string>
    <string name="galeria">Galería de Imágenes</string>
    <string name="nombre">Nombre</string>
    <string name="dni">DNI</string>
    <string name="sync_exitosa">Sincronización realizada correctamente</string>
    <string name="sync_error">No se ha podido sincronizar con el servidor</string>
    <string name="pendiente">PENDIENTE</string>
    <string name="parcial">PARCIAL</string>
    <string name="terminado">TERMINADO</string>
</resources>