<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Campo Nombre -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo DNI -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dni">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo Firma -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firma"
            android:layout_marginTop="8dp"/>

        <view
            android:id="@+id/firmaView"
            class="com.example.gestoravisos.Clases.FirmaView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="4dp"/>

        <Button
            android:id="@+id/btnLimpiarFirma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpiar_firma"
            android:layout_gravity="end"/>

        <!-- Selector de Estado -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleGroupEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingVertical="10dp"
            android:orientation="horizontal"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rbParcial"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_weight="1"
                android:text="@string/btn_parcial"
                android:checked="true"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rbTerminado"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_weight="1"
                android:text="@string/btn_terminado"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <!-- Botones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="end">

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"/>

            <Button
                android:id="@+id/btnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aceptar"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>