<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tituloObservaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titObservaciones"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/textObservaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minHeight="150dp"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:maxLines="10"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/obsBtnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/obsBtnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
</LinearLayout>