<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostrar_urgentes"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:layout_marginBottom="8dp"/>

        <!-- Espaciador flexible -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Switch
            android:id="@+id/switchUrgentes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:paddingRight="10dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostrar_firmados"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:layout_marginBottom="8dp"/>

        <!-- Espaciador flexible -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Switch
            android:id="@+id/switchFirmados"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:paddingRight="10dp"
            android:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>




    <!-- Filtro por Urgencia
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filtrar_por_urgencia"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/radioGroupUrgencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioTodos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todos"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioUrgentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urgentes"
            android:layout_marginStart="16dp"/>
    </RadioGroup>-->

    <!-- Filtro por Estado -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filtrar_por_estado"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/tgFiltrarEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingVertical="10dp"
        android:orientation="vertical"
        app:singleSelection="false"
        app:selectionRequired="false">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/tgFiltrarPendientes"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:layout_weight="1"
            android:text="@string/pendientes"
            android:checked="true"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/tgFiltrarParciales"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:layout_weight="1"
            android:text="@string/parciales"
            android:checked="true"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tgFiltrarTerminados"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:layout_weight="1"
            android:text="@string/terminados"
            android:checked="true"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>
<!--
    <RadioGroup
        android:id="@+id/radioGroupEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioTodosEstados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todos"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioPendientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pendientes"/>

        <RadioButton
            android:id="@+id/radioParciales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parciales"/>

        <RadioButton
            android:id="@+id/radioTerminados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terminados"/>
    </RadioGroup> -->

    <!-- Filtro por Fecha -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filtrar_por_fecha"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:layout_marginBottom="8dp"/>

        <!-- Espaciador flexible -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Switch
            android:id="@+id/switchFecha"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:paddingRight="10dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/layoutFechas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/tgFiltrarFechas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingVertical="10dp"
            android:orientation="horizontal"
            app:singleSelection="true"
            app:selectionRequired="false">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/tgSemanaActual"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:layout_weight="1"
                android:text="@string/mostrar_semana"
                android:checked="false"
                android:enabled="false"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/tgRangoFechas"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:layout_weight="1"
                android:text="@string/por_rango"
                android:checked="false"
                android:enabled="false"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btnSeleccionarFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_rango_fechas"
        android:enabled="false"
        style="?attr/materialButtonOutlinedStyle"/>




    <!-- Botones de acción -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/btnAplicarFiltros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aplicar"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btnLimpiarFiltros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpiar"/>
    </LinearLayout>
</LinearLayout>