<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Nombre de la Base de Datos -->
        <TextView
            android:id="@+id/db_config_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/catBDExterna"
            android:drawableStart="@drawable/basedatos"
            android:drawablePadding="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"/>


        <!-- Dirección IP -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_ip"
            android:textSize="18sp"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/et_db_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"
            android:minHeight="48dp"
            android:background="@drawable/edittext_background"/>

        <!-- Puerto -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_puerto"
            android:textSize="18sp"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/et_db_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="number"
            android:maxLines="1"
            android:minHeight="48dp"
            android:background="@drawable/edittext_background"/>

    </LinearLayout>
</ScrollView>